--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Canvas Drawing</title>
+  <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
   <style>
+
     body {
       display: flex;
       flex-direction: column;
@@ -14,7 +16,8 @@
       background-color: #f4f4f4;
     }
     canvas {
-      border: 1px solid #000;
+        /* messing with image data  */
+        /* border: 1px solid #000;  */
       background-color: white;
     }
     .buttons {
