down sampling | normalising | slicing | still not working my ***

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
   </div>
   <div id="prediction_display"></div>
 
-  <script src="canvas_utils.js"></script>
+  <script type="module" src="canvas_utils.js"></script>
 </body>
 </html>
